# proteomics_lab_agent

./: .env.example  .env.secrets.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  Dockerfile  MANIFEST.in  README.md  docker-compose.yaml  pre-commit-config.yaml  pyproject.toml  secrets.ini.example
.github/workflow/: branch-checks.yaml  code_review.yml
.github/workflows/: branch-checks.yaml
data/: ConnectingColumnSampleLine_docuWithoutStandbyANDtimsControl.md  ConnectingColumnSampleLine_protocolCorrect copy.md  ConnectingColumnSampleLine_protocolCorrect.md  Dilute_docuWrongSolvent.md  Dilute_docuWrongVolume_PipettTipNotChanged.md  Diluting_protocolCorrect.md  DisconnectColumn_protocolCorrect.md  DisconnectingColumn_docuCorrect.md  DisconnectingColumn_docuWithoutStandby.md  ESIsourceToUltraSource_docuCorrect.md  ESIsourceToUltraSource_docuFogotOvenPowerSupply.md  ESIsourceToUltraSource_protocolCorrect_CapillaryPushedIn.md  Evotip_docuWrongSpinInEvotipBox_wrongSpeed.md  Evotip_protocolCorrect.md  Pipette_docuCorrect.md  Pipette_docuFirstTwoWrongVolumneANDA2Twice.md  Pipette_docu_WrongRowB_B10Twice_B11LeftOut.md  Pipette_ducoBufferBInsteadBufferA.md  Pipette_protocolCorrect.md  PlaceEvotips_docuBoxAngeled.md  PlaceEvotips_docuCorrect.md  PlaceEvotips_docuLiquidNotChecked.md  PlaceEvotips_docuWrongPosition.md  PlaceEvotips_protocolCorrect.md  QueueSamples_docuCorrect.md  QueueSamples_docuDiffSampleNameAndEvotipNotAtPosition.md  QueueSamples_docuEvotipNotAtPositionNoSampleID.md  QueueSamples_docuNoBlankNoSampleIDWrongMSmethod.md  QueueSamples_docuWrongRow_S3A1Twice.md  QueueSamples_protocolCorrect.md  TimsCalibration_docuCorrect.md  TimsCalibration_docuCorrect_camera.md  TimsCalibration_docuNotAllClicksVisibleOnVideo.md  TimsCalibration_docuSavedMethod.md  TimsCalibration_docuWrongOrderSteps.md  TimsCalibration_protocolCorrect.md  UltraSourceToESIsource_docuCorrect.md  UltraSourceToESIsource_docuForgotCapillaryCap.md  UltraSourceToESIsource_docuForgotGlovesANDCapillaryCap.md  UltraSourceToESIsource_docuForgotN2Line.md  (+3 more)
deployment_data/: database.db
deployment_data/evalset/: lab_note_generator.evalset.json  protocol_finder.evalset.json  protocol_generator.evalset.json  question_agent.evalset.json
eval/: test_eval.py
eval/eval_lab_note_generation/: __init__.py  benchmark_data.csv  eval_analysis_data.py  eval_analysis_plot.py  eval_analysis_run.py  eval_set_converter.py  evaluator.py  prompt.py  test_eval.py
eval/eval_protocol_finding/: custom_evaluator.py  eval_set_converter.py  test_config.json  test_eval.py  (+2 more)
nbs/: 0_documentation_initial_implementation.ipynb  1_videoToDocumentation_ProtocolFinder.ipynb  1_videoToLabNotes_ProtocolFinder.ipynb  1_videoToProtocol_Evaluation.ipynb  1_videoToProtocol_withoutAddedKnowledge.ipynb  2_videoToDocumentation_CompareVideoWithProtocol.ipynb  2_videoToLabNotes_CompareVideoWithProtocol.ipynb  2_videoToProtocol_results.ipynb  2_videoToProtocol_withFewShotLearning.ipynb  3_videoToLabNotes_results.ipynb  3_videoToProtocol_withInContextLearning.ipynb  4_videoToLabNotes_adk_workflow.ipynb  4_videoToProtocol_ChainOfThoughtLogic.ipynb  5_videoToProtocol_ChainOfAgentsLogic.ipynb  6_videoToProtocol_Evaluation.ipynb  7_videoToProtocol_results.ipynb  README.md  database_test.ipynb  documentation_test.ipynb  protocolGeneration.ipynb  test.ipynb  videoToLabNotes_adk_workflow.ipynb
proteomics_lab_agent/: agent.py  test_config.json
proteomics_specialist/: __init__.py  agent.py  config.py  documentation_agent.py  evaluation.py  lab_note_generator.evalset.json  prompt.py  protocol_finder.evalset.json  protocol_generator.evalset.json  question_agent.evalset.json  videoToProtocol.py  video_to_protocol.py
requirements/: requirements.txt  requirements_development.txt  requirements_loose.txt
(+77 files in other folders)
